--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> d0rk </title>
+</head>
+<body>
+    <div class="head">
+        <div class="name">
+            <h1> d0rk-devel </h1>
+        </div>
+    </div>
+</body>
+</html>
