--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         <div class="name">
-            <h1> d0rk-devel </h1>
+            <h1> <span>d0rk</span> </h1>
         </div>
     </div>
 </body>
