--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="name">
             <h1> <span>d0rk</span> </h1>
         </div>
+
+        <div class="about">
+            <p> d0rk cyber security researcher & full time bug bounty hunter. </p>
+
+        </div>
     </div>
 </body>
 </html>
