--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
 
         <div class="about">
-            <p> d0rk cyber security researcher & full time bug bounty hunter. </p>
+            <h5><span> ~/  </span></h5>
+            <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
 
         </div>
     </div>
