--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
         <div class="about">
             <h5><span> ~/  </span></h5>
-            <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
-
+            <p class="p"> d0rk cyber security researcher 
+                            & full time bug bounty hunter.
+            </p>
         </div>
     </div>
 </body>
