--- a/index.html
+++ b/index.html
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> d0rk </title>
     <link rel="stylesheet" href="index.css">
-    
 </head>
 <body>
     <div class="head">
         <div class="name">
             <h1> <span>d0rk</span> </h1>
         </div>
-
         <div class="about">
-            <h5><span> ~/  </span></h5>
-            <p class="p"> d0rk cyber security researcher 
-                            & full time bug bounty hunter.
-            </p>
+            <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
         </div>
     </div>
 </body>
