--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="about">
             <h1></h1>
             <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
+            <p class="p"> Using Python, C, Ruby ...</p>
         </div>
     </div>
 </body>
