--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1></h1>
             <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
             <p class="p"> Using Python, C, Ruby ...</p>
+            <p class="p"> Focusing on open source softwear ... </p>
         </div>
     </div>
 </body>
