--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> d0rk </title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="body">
     <div class="head">
         <div class="name">
             <h1> <span>d0rk</span> </h1>
