--- a/index.html
+++ b/index.html
@@ -6,17 +6,9 @@
     <title> d0rk </title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body class="body">
-    <div class="head">
-        <div class="name">
-            <h1> <span>d0rk</span> </h1>
-        </div>                                                                                                                                                                                                                                                          
-        <div class="about">
-            <h1></h1>
-            <p class="p"> d0rk cyber security researcher & full time bug bounty hunter. </p>
-            <p class="p"> Using Python, C, Ruby ...</p>
-            <p class="p"> Focusing on open source softwear ... </p>
-        </div>
+<body>
+    <div class="d0rk">
+        <div><h1>d0rk</h1></div>
     </div>
 </body>
 </html>
