--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="d0rk">
-        <div><h1>d0rk</h1></div>
+        <div class="name"><h1>d0rk</h1></div>
     </div>
 </body>
 </html>
