init commit request
...

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="d0rk">
-        <div class="name"><h1>d0rk</h1></div>
-        
+        <div class="name">d0rk</div>
     </div>
 </body>
 </html>
